2010-03-15  Joanmarie Diggs  <joanmarie.diggs@gmail.com>

        Reviewed by Holger Freyther.

        https://bugs.webkit.org/show_bug.cgi?id=35502
        [Gtk] Objects of ATK_ROLE_TABLE should not implement AtkText

        Simple change to stop tables from implementing AtkText.

        * accessibility/gtk/AccessibilityObjectAtk.cpp:
        (getInterfaceMaskFromObject):

2010-03-15  Adam Bergkvist  <adam.bergkvist@ericsson.com>

        Reviewed by Adam Barth.

        According to the updated specification, a data field should always
        result in a newline character being appended to the data buffer
        regardless if the data buffer contains any data or not. However, upon
        event dispatch, the last newline will be removed. This differs from an
        older version of the specification where a newline character was
        appended before the data value only if the buffer already contained
        data. As a result, EventSource now supports receiving events with empty
        data or newline characters only.
        https://bugs.webkit.org/show_bug.cgi?id=33210

        * page/EventSource.cpp:
        (WebCore::EventSource::parseEventStreamLine):

2010-03-15  Valters Svabe  <vsvabe@gmail.com>

        Reviewed by Darin Adler.

        :after selector displays in wrong place with nested div
        https://bugs.webkit.org/show_bug.cgi?id=32288
        
        Make sure we don't append things after :after-generated content, if
        it's inside an anonymous block.

        Test: fast/css-generated-content/block-after.html

        * rendering/RenderBlock.cpp:
        (WebCore::RenderBlock::addChild):

2010-03-15  Leandro Pereira  <leandro@profusion.mobi>

        Reviewed by Eric Seidel.

        Add EFL port files to platform/efl.
        http://webkit.org/b/35885

        * platform/efl/KURLEfl.cpp: Added.

2010-03-15  Chris Fleizach  <cfleizach@apple.com>

        Reviewed by Beth Dakin.
