@@ -1,3 +1,12 @@
+2010-03-15  Leandro Pereira  <leandro@profusion.mobi>
+
+        Reviewed by Holger Freyther.
+
+        Add EFL port files to platform/efl.
+        http://webkit.org/b/35882
+
+        * platform/efl/ContextMenuItemEfl.cpp: Added.
+
 2010-03-15  Joanmarie Diggs  <joanmarie.diggs@gmail.com>
 
         Reviewed by Holger Freyther.
